extras/backup/kubernetes-manifests/accounts-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: accounts
    tier: db
  name: accounts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-db
      application: bank-of-anthos
      environment: development
      team: accounts
      tier: db
  serviceName: accounts-db
  template:
    metadata:
      labels:
        app: accounts-db
        application: bank-of-anthos
        environment: development
        team: accounts
        tier: db
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: environment-config
        - configMapRef:
            name: accounts-db-config
        - configMapRef:
            name: demo-data-config
        image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/accounts-db:v0.6.2@sha256:c55f28a015c77b6701d9e32c53fb63c11268df0f2eca7a490f0faa6be427bb62
        name: accounts-db
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresdb
          subPath: postgres
      serviceAccountName: default
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: accounts-db
