extras/backup/kubernetes-manifests/ledger-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: ledger
    tier: db
  name: ledger-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-db
      application: bank-of-anthos
      environment: development
      team: ledger
      tier: db
  serviceName: ledger-db
  template:
    metadata:
      labels:
        app: ledger-db
        application: bank-of-anthos
        environment: development
        team: ledger
        tier: db
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: environment-config
        - configMapRef:
            name: ledger-db-config
        - configMapRef:
            name: demo-data-config
        image: us-central1-docker.pkg.dev/bank-of-anthos-ci/bank-of-anthos/ledger-db:v0.6.2@sha256:abf589513b05769093862ed6faf405b0540cc4fb3c89a19e212842cb9acd04e4
        name: postgres
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: 250m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresdb
          subPath: postgres
      serviceAccountName: default
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: ledger-db
