extras/backup/kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    application: bank-of-anthos
    environment: development
    team: frontend
    tier: web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bank-of-anthos
    kubernetes.io/ingress.class: gce
  name: frontend
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
